# llmoji-experiment

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
data/: d_s_classifier_powercheck.md  d_s_classifier_powercheck.tsv  d_s_classifier_summary.md  d_s_classifier_summary.tsv  face_likelihood_ensemble_predict_claude_gt.md  face_likelihood_ensemble_predict_claude_gt.tsv  face_likelihood_subset_search_claude_gt.md  face_likelihood_subset_search_claude_gt.tsv  v3_face_union.parquet  v3_face_union.tsv
docs/: 2026-05-04-claude-groundtruth-pilot.md  2026-05-05-residual-state-axes.md  2026-05-05-soft-everywhere-methodology.md  2026-05-06-nn-lb-future-cells.md  2026-05-06-prompt-extension-roadmap.md  2026-05-06-use-read-act-channels.md  2026-05-07-claude-gt-v4-extension-pilot.md  2026-05-07-quadrants-canonical-module.md  2026-05-08-saturation-threshold-recal.md  2026-05-09-lb-promotion-pilot.md  2026-05-09-self-event-pilot.md  2026-05-10-attractor-pilot.md  2026-05-10-true-self-pilot.md  findings.md  gotchas.md  harness-side.md  internals.md  local-side.md  previous-experiments.md
llmoji_experiment/: __init__.py  claude_faces.py  claude_gt.py  config.py  emotional_analysis.py  emotional_prompts_jp.py  face_likelihood_discovery.py  jsd.py  lexicon.py  per_project_charts.py  quadrants.py  self_event_prompts.py  true_self_prompts.py
llmoji_study/: claude_faces.py  claude_gt.py  config.py  conspiracy_prompts.py  doom_prompts.py  emotional_analysis.py  emotional_prompts.py  emotional_prompts_jp.py  jsd.py  lb_prompts.py  lexicon.py  per_project_charts.py  (+3 more)
(+234 files in other folders)
