[project]
name = "llmoji-experiment"
version = "0.1.0"
description = "Does kaomoji choice track internal state in local LMs? Research-side companion to the `llmoji` PyPI package."
requires-python = ">=3.12"
license = "CC-BY-SA-4.0"
license-files = ["LICENSE"]
authors = [{ name = "a9lim", email = "mx@a9l.im" }]
# Heavy ML deps live here. The data-collection / canonical-Haiku /
# bundle-and-upload side is in the `llmoji` package; depend on it
# directly so all six study scripts can `from llmoji import …`.
dependencies = [
    "transformer-experiments>=0.1,<0.2",
    "llmoji>=2.0,<3",
    "saklas>=1.4.6",
    "anthropic",
    "huggingface_hub",  # snapshot the contributor-submitted kaomoji corpus
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "pandas",
    "sentence-transformers",
    "pyarrow",
    "plotly",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# We don't intend to publish this — it's a research repo. The wheel
# config exists only so `pip install -e .` works for local dev (and
# `from llmoji_experiment import …` if anyone ever wants it). The real
# entry point is the scripts in `scripts/`.
packages = ["llmoji_experiment"]
